# swift-finance

./: .gitignore  ARCHITECTURE.md  BACKUP-GUIDE.md  README.md  backup.bat  create-backup.sh  full-backup.bat  git-backup.bat  package-lock.json  package.json  pnpm-lock.yaml  screenshot.ps1  svelte.config.js  vite.config.js  vite.config.js.timestamp-1759334135671-b00e092f0dcb.mjs
.claude/: settings.local.json
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/components/: AddTransactionModal.svelte  Dashboard.svelte  Navigation.svelte
src/lib/components/dashboard/: FilterBar.svelte  FinancialChart.svelte  QuickActions.svelte  StatsGrid.svelte  TransactionsList.svelte
src/lib/components/layout/: HeaderSection.svelte
src/lib/services/: ExportService.ts  StorageService.ts  ValidationService.ts
src/lib/stores/: filters.ts  transactions.ts  user.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/accounts/: +page.svelte
src/routes/dashboard/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/transactions/: +page.svelte
src/shared/types/: stats.ts  transaction.ts
