[package]
name = "swift-finance"
version = "0.1.0"
description = "Modern desktop finance management application"
authors = ["Ioan Nomad"]
license = "MIT"
repository = "https://github.com/ioan-nomad/swift-finance"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["shell-open"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]